[Refactor] Centralizing the logic into a new DistributionInfoBuilder  and DistributionDescAnalyzer (#62069)